fix(custom): 修改获取房屋接口